# HW7_WEB

./: config.ini  my_select.py  pyproject.toml  seed.py
migrations/versions/: 805c4ef7acbd_init.py
src/: db.py  models.py
